# bboyapp

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  temp
.github/workflows/: docker-build.yml
alembic/: env.py
alembic/versions/: 2c85c9300d22_initial_tables.py
app/: config.py  database.py  main.py
app/models/: __init__.py  artist.py  battle_report.py  event.py  group.py  guestbook.py
app/routers/: artists.py  events.py  groups.py  guestboard.py  home.py  stats.py
app/scraper/: and8_client.py  tasks.py
app/services/: email.py  ical.py
app/static/: manifest.json  sw.js
app/static/css/: main.css
app/static/js/: main.js
app/templates/: base.html  guestboard.html  home.html
app/templates/artists/: detail.html  list.html
app/templates/events/: detail.html  list.html
app/templates/groups/: detail.html  list.html
app/templates/stats/: detail.html  list.html  review.html
docs/plans/: 2026-03-05-bboyapp-design.md
