[tool.poetry]
name = "bboyapp"
version = "0.1.0"
description = "街舞社区网站"
authors = ["bboysoul"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.135.1"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
sqlalchemy = "^2.0.48"
asyncpg = "^0.31.0"
alembic = "^1.18.4"
jinja2 = "^3.1.6"
python-multipart = "^0.0.22"
httpx = "^0.28.1"
beautifulsoup4 = "^4.14.3"
lxml = "^6.0.2"
apscheduler = "^3.11.2"
pydantic-settings = "^2.13.1"
icalendar = "^7.0.3"
aiosmtplib = "^5.1.0"
greenlet = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
